Comentarios acerca de instalar varios servidores de config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ eureka.client.fetch-registry=false
 
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
+
+#Esto para montar 2 servidores de eureka que cada uno se identifique en el otro. (peer1 y peer2)
+#spring.profiles= peer1
+#eureka.instance.hostname=peer1
+#eureka.client.service-url.defaultZone=http://peer2/eureka/
